# Developlus

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  run.sh
article/: AWE.docx  read_docx.py
frontend/: chat.html  index.html
frontend/css/: chat.css  main.css
frontend/js/: api.js  auth.js  chat.js
frontend_react/: .gitignore  Dockerfile
frontend_react/src/: App.jsx  index.css
frontend_react/src/api/: analyzeApi.js
frontend_react/src/components/: AuthView.jsx  ChatPanel.jsx  ChatView.jsx  Dashboard.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  ProjectsView.jsx  SettingsView.jsx  Sidebar.jsx  StackView.jsx  SurveyView.jsx
frontend_react/src/data/: categories.js  mockData.js
nginx/: nginx.conf
postgres/: init.sql
redis/: redis.conf
services/api/: Dockerfile  pyproject.toml
services/api/src/: __init__.py  celery_client.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
services/api/src/datasets/: tds-prefinal.json  tsds-final.json
services/api/src/routers/: __init__.py  analyze.py  auth.py  chat.py  health.py  projects.py  rag.py  users.py
services/api/src/scripts/: index_datasets.py  test_cases.json  test_chat_endpoint.py  test_report.json
services/api/src/services/: __init__.py  auth_service.py  cache_service.py  chat_service.py  dataset_service.py  llm_service.py  rag_service.py  tavily_service.py
services/litellm/: config.yaml
services/worker/: Dockerfile  pyproject.toml
services/worker/src/: __init__.py  celery_app.py
services/worker/src/tasks/: __init__.py  cleanup_tasks.py  document_tasks.py
src/: index.css
src/api/: analyzeApi.js
src/components/: ChatPanel.jsx  Features.jsx  Footer.jsx  ResultCard.jsx
