[project]
name = "developlus-worker"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "celery[redis]>=5.4.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "redis[hiredis]>=5.0.0",
    "openai>=1.40.0",
    "pypdf>=4.0.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
